# stocksight

./: .gitignore  README.md  directory_tree.txt  pyproject.toml  requirements.txt
backend/: .env  README.md  __init__.py  alembic.ini  dump.rdb  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: create_fda_tables.py
backend/api/: __init__.py  auth.py
backend/api/routes/: __init__.py  auth.py  competitors.py  indices.py  ipo.py  market.py  news.py  report.py  stock.py
backend/api/routes/endpoints/: browse.py  companies.py  feature_flags.py  news_endpoints.py  rss.py  tracked.py
backend/api/schemas/: company.py  competitor.py  ipo.py  market.py  market_data.py  news.py  stock.py
backend/config/: __init__.py  database.py  settings.py
backend/models/: base.py  company.py  competitor.py  fda.py  ipo.py  news.py  stock.py  tracked_company.py  user.py
backend/routers/: fda.py
backend/services/: __init__.py  analyses.py  analysis.py  cache.py  company_browse.py  company_data.py  company_search.py  competitor.py  competitor_analysis.py  competitor_score.py  email_service.py  fda_service.py  ipo.py  market_data.py  marketstack.py  marketstack_client.py  news.py  pdf_generator.py  stock.py
backend/stocksight_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tasks/: scheduler.py  sec_query.py
database/: alembic.ini  env.py
database/migrations/: env.py  script.py.mako
database/migrations/versions/: 21816d8c715f_add_competitors_and_ipo_listings.py  add_company_info_table.py  bd173140749e_merge_heads.py  enhance_biotech_schema.py  fe394cb06589_initial_migration.py  ff21e9c24c9c_add_users_and_tracked_companies_tables.py  insert_biotech_competitors.py  move_stock_prices.py  update_ipo_listings.py
database/models/: stock.py
database/sql/: 21816d8c715f.sql  maintenance.sql
frontend/: README.md  dump.rdb  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AdminPanel.tsx  CompanyVisualizations.tsx  CompetitorList.tsx  (+17 more)
(+51 files in other folders)
