[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stocksight"
version = "1.0.0"
description = "API for biotech stock market data and analysis"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0,<0.69.0",
    "uvicorn>=0.15.0,<0.16.0",
    "sqlalchemy>=1.4.0,<1.5.0",
    "psycopg2-binary>=2.9.1,<3.0.0",
    "alembic>=1.7.0,<1.8.0",
    "python-dotenv>=0.19.0,<0.20.0",
    "httpx>=0.24.0,<0.25.0",
    "pydantic>=1.8.0,<2.0.0"
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
namespaces = false 